cargo-features = [ "codegen-backend", "trim-paths" ]

[workspace]
members = [
  # Prevent collapsing
  "crates/rustcraft_bin",
  "crates/rustcraft_chunks",
  "crates/rustcraft_config",
  "crates/rustcraft_decoding",
  "crates/rustcraft_encoding",
  "crates/rustcraft_pool",
  "crates/rustcraft_sdk",
]
exclude = [
  #
  "Protocols",
  "./world",
]


resolver = "2"

[workspace.metadata]
version = "0.1.0"
edition = "2024"
exclude = [
  # Prevent collapsing
  "target/**",
  "**/target/**",
  "**/tests/**",
  "**/examples/**",
  "**/benches/**",
  "protocols/**",
]

# [package]
# name    = "rustcraft"
# version = "0.1.0"
# edition = "2021"


[workspace.dependencies]
tokio              = { version = "1.42", features = [ "full" ] }
bytes              = "1.7"
anyhow             = "1.0"
thiserror          = "1.0"
tracing            = "0.1"
tracing-subscriber = "0.3"
serde              = { version = "1.0", features = [ "derive" ] }
serde_json         = "1.0"
uuid               = { version = "1.10", features = [ "v4", "v3", "serde" ] }
parking_lot        = "0.12"
bincode            = "1.3"
md5                = "0.7"
futures            = { version = "0.3.31", features = [ "bilock", "compat", "io-compat", "thread-pool", "unstable", "write-all-vectored" ] }
smallvec           = { version = "1.15.1", features = [ "const_generics", "union", "specialization", "const_new", "write", "serde" ] }
proc-macro2        = "1.0"
rayon              = { version = "1.11.0" }
dashmap            = "7.0.0-rc2"


[profile.dev]
opt-level        = 1
codegen-units    = 256
incremental      = true
codegen-backend  = "cranelift"
debug            = "line-tables-only"
debug-assertions = true
overflow-checks  = true
strip            = "none"             # true | false | "none" | "symbols" | "debuginfo" ## Leave off @ w. THIS IS NOT OBFUSCATION.
panic            = "abort"            # "unwind" | "abort"
lto              = "off"              # "false" ### # true | false | "off" | "thin" | "fat" ## Can't use with cranelift yet
trim-paths       = "none"
# tune-cpu         = "native"

######################################################################################################################################################

[profile.release]
opt-level        = 3
codegen-units    = 1
incremental      = false
codegen-backend  = "cranelift"                 # May break deps.
debug            = "none"
debug-assertions = false
overflow-checks  = false                       # debatable
strip            = "symbols"                   # true | false | "none" | "symbols" | "debuginfo" ## Leave off @ w. THIS IS NOT OBFUSCATION.
panic            = "unwind"
lto              = "off"                       # true | false | "off" | "thin" | "fat" ## Can't use with cranelift yet
trim-paths       = [ "diagnostics", "object" ]
# tune-cpu         = "native"


[profile.dev.package."*"]
inherits        = "release"
codegen-backend = "cranelift" #### May break deps. for external crates

[profile.release.package."*"]
inherits        = "release"
codegen-backend = "cranelift" #### May break deps. for external crates??????

# For Windows Dev's due to how cargo-watch works and when it attempts to re-build on changes.
[profile.test.build-override]
dir-name = "/tmp"

######################################################################################################################################################
######################################################################################################################################################
