[package]
name    = "rustcraft_pool"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustcraft_pool"
path = "src/lib.rs"

[dependencies]


# Lint levels / priorities/priority
# 0 = forbid
# 1 = deny
# 2 = warn
# 3 = allow
[lints.rust]
unsafe_code = { level = "forbid", priority = 0 }
# unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = { level = "warn", priority = 2 }
